example/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-service
        tier: backend
    spec:
      containers:
        - name: "echo-node"
          image: "kennship/http-echo"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
