example/service.yml
kind: Service
apiVersion: v1
metadata:
  name: echo-service
spec:
  selector:
    app: echo-service
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      name: http
