example/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vlctechfest-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    #ºnginx.ingress.kubernetes.io/affinity: "cookie"
    #ºnginx.ingress.kubernetes.io/session-cookie-name: "vlctechfest-route"
    #ºnginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
    - hosts:
      - vlctechfest.fractalwarrior.com
      secretName: vlctechfest-tls
  rules:
  - host: vlctechfest.fractalwarrior.com
    http:
      paths:
      - path: /
        backend:
            serviceName: echo-service
            servicePort: 8080
